<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:tools="http://schemas.android.com/tools"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/FrameLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".VideoRecorder" >

    <com.capsule.app.capsule.TappableCameraPreview
        android:id="@+id/camview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:drawableLeft="@drawable/info"
            android:gravity="center_vertical"
            android:text="@string/tap_to_stop"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/background_light"
            android:textSize="14sp" />

        <com.capsule.app.capsule.NavMenu
            android:id="@+id/menu"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignBottom="@+id/progressbar"
            android:layout_alignParentRight="true"
            android:animateFirstView="true"
            android:inAnimation="@android:anim/fade_in"
            android:outAnimation="@android:anim/fade_out"
            android:visibility="invisible" >

            <LinearLayout
                android:id="@+id/presocmenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" >

                <ImageButton
                    android:id="@+id/restart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/restart"
                    android:src="@drawable/restart" />

                <ImageButton
                    android:id="@+id/replay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/replay"
                    android:src="@drawable/replay" />

                <ImageButton
                    android:id="@+id/edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/edit"
                    android:src="@drawable/edit" />

                <ImageButton
                    android:id="@+id/share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/share"
                    android:src="@drawable/share" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center" >

                <com.capsule.app.capsule.SocialList
                    android:id="@+id/soclist"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:gravity="center" >
                </com.capsule.app.capsule.SocialList>
            </RelativeLayout>
            
        </com.capsule.app.capsule.NavMenu>

        <com.capsule.app.capsule.VideoProgressBar
            android:id="@+id/progressbar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="26dp"
            android:max="100" />

    </RelativeLayout>

    <ViewAnimator
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:layout_gravity="bottom"
        android:animateFirstView="true" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >

            <ImageView
                android:id="@+id/camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/camera"
                android:scaleType="centerCrop"
                android:src="@drawable/camera" />

            <TextView
                android:id="@+id/record"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:drawablePadding="5dp"
                android:gravity="center_vertical|bottom"
                android:text="@string/minicon_record_txt"
                android:textAppearance="?android:attr/textAppearanceSmallInverse"
                android:textColorHint="@android:color/white" />
        </LinearLayout>

        <TextView
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:drawableLeft="@drawable/save"
            android:drawablePadding="6dp"
            android:gravity="center_vertical|bottom"
            android:text="@string/minicon_save_txt"
            android:textAppearance="?android:attr/textAppearanceSmallInverse"
            android:textColorHint="@android:color/white" />

        <View
            android:id="@+id/dummy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            tools:ignore="UseCompoundDrawables" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/camera"
                android:src="@drawable/upload" />

            <TextView
                android:id="@+id/upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:drawablePadding="5dp"
                android:gravity="center_vertical|bottom"
                android:text="@string/minicon_upload_txt"
                android:textAppearance="?android:attr/textAppearanceSmallInverse"
                android:textColorHint="@android:color/white" />
        </LinearLayout>
    </ViewAnimator>

</merge>